# lib_ibas

./: CMakeLists.txt  README.md  unicode-test.c
Lab1.1/: lab1.23.c
Lab1.2/: lab2.23.c
Lab1.3/: lab3.23.c
Lab1.4/: lab4.23.c  record-processor.c  record-processor.h  test.txt
Lab2.1/: lab2.1.1.c
Lab2.2/: lab2.2.1.c
Lab2.3/: lab2.3.1.c  record-processor.c  record-processor.h  rp-internal.h  rp-io.c  rp-manip.c  test.txt
lib_ibas/v1.0/: doubleMatrix.c  doubleMatrix.h  io.c  io.h  wide-io.c  wide-io.h
lib_ibas/v1.5/: base.c  base.h  string.c  util.c  util.h
lib_ibas/v1.5/io/: console.c  console.h  primitive.c  primitive.h  text.c  text.h
lib_ibas/v1.9/: base.h
lib_ibas/v1.9/io/: console.c  console.h  scanner.c  scanner.h
lib_ibas/v1.9/matrix/: d-matrix.c  d-matrix.h  i-matrix.c  i-matrix.h
lib_ibas/v2.0/: fwd.h  lib_ibas.c  lib_ibas.h
lib_ibas/v2.0/base/: base.c  base.h  ibas.c  ibas.h  macros.h  object.c  object.h  string.c  string.h  to-string.c  to-string.h  types.h  wrappers.c  wrappers.h
lib_ibas/v2.0/base/exceptions/: e4c-adapter.c  e4c-adapter.h  exc-decl.h  exc-def.h  exc-impl.c  exc-impl.h  exception.c  exception.h
lib_ibas/v2.0/collections/: generic-linked-list.h  generic-vector.h  linked-list.c  linked-list.h  list.c  list.h  vector.c  vector.h
lib_ibas/v2.0/collections/typed/: double-linked-list.c  double-vector.c  int-vector.c  int-vector.h  object-vector.c
lib_ibas/v2.0/containers/: d-matrix.c  d-matrix.h  generic-linked-list.h  generic-list.h  generic-vector.h  i-matrix.c  i-matrix.h  linked-list.c  linked-list.h  vector.c  vector.h
lib_ibas/v2.0/containers/typed/: double-linked-list.c  double-linked-list.h  double-vector.c  double-vector.h  int-linked-list.c  int-linked-list.h  int-vector.c  int-vector.h  object-linked-list.c  object-linked-list.h  object-vector.c  object-vector.h
lib_ibas/v2.0/io/: console.c  console.h  files.c  files.h  scanner.c  scanner.h  writer.c  writer.h
lib_ibas/v2.0/util/: time.c  time.h
lib_ibas/v3.0/: README.md  base.h  functions.h  fwd.h  string.h  validators.c  validators.h
lib_ibas/v3.0/base/: functions.c  ibas.c  ibas.h  macros.h  object.c  object.h  oop-macros.h  string.c  string.h  to-string.c  to-string.h
lib_ibas/v3.0/collections/: generic-linked-list.h  generic-vector.h  linked-list.c  linked-list.h  list.c  list.h  vector.c  vector.h
lib_ibas/v3.0/io/: console.c  console.h  primitive.c  primitive.h  record.c  record.h  scanner.c  scanner.h  text.c  text.h
(+4 files in other folders)
